commit after merge

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3003",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,7 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.4",
-    "@mui/material": "^5.15.19",
+    "@mui/material": "^5.15.20",
     "@nextui-org/button": "^2.0.31",
     "@nextui-org/card": "^2.0.28",
     "@nextui-org/dropdown": "^2.1.23",
@@ -21,11 +21,9 @@
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/table": "^2.0.35",
     "@nextui-org/theme": "^2.2.3",
-    "@nextui-org/tooltip": "^2.0.35",
-    "archiver": "^7.0.1",
-    "dotenv": "^16.4.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "framer-motion": "^11.2.6",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "os": "^0.1.2",
     "react": "^18",
